--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
             </div>
         </div>
     </div>
+    <img class="up-button" src="img/up-buton.png" alt="">
     <section class="hero">
         <div class="hero__wrapper">
             <div class="swiper hero__slider">
@@ -298,10 +299,10 @@
                         <div class="company__slider-controls">
                             <div class="company__pagination"></div>
                             <div class="company__buttons">
-                                <div class="company-prev">
+                                <div class="button-white company-prev">
                                     <img src="img/company-slider-left.png" alt="">
                                 </div>
-                                <div class="company-next">
+                                <div class="button-white company-next">
                                     <img src="img/company-slider-right.png" alt="">
                                 </div>
                             </div>
@@ -435,24 +436,150 @@
                 <div class="news__items">
                     <div class="news__item">
                         <div class="news__item-image"><img src="img/news-1.png" alt=""></div>
-                        <div class="news__item-title">Объект сдан!</div>
                         <div class="news__item-block">
-                            <div class="news__item-date">10.01.2024</div>
-                            <a href="#" class="news__item-button"><img src="img/menu-toggle.png" alt=""></a>
+                            <div class="news__item-text">
+                                <div class="news__item-title">Объект сдан!</div>
+                                <div class="news__item-date">10.01.2024</div>
+                            </div>
+                            <a href="#" class="button-white news__item-button">
+                                <img src="img/menu-toggle.png" alt="">
+                            </a>
                         </div>
                     </div>
                     <div class="news__item">
                         <div class="news__item-image"><img src="img/news-1.png" alt=""></div>
-                        <div class="news__item-title">Объект сдан!</div>
                         <div class="news__item-block">
-                            <div class="news__item-date">10.01.2024</div>
-                            <a href="#" class="news__item-button"><img src="img/menu-toggle.png" alt=""></a>
+                            <div class="news__item-text">
+                                <div class="news__item-title">Объект сдан!</div>
+                                <div class="news__item-date">10.01.2024</div>
+                            </div>
+                            <a href="#" class="button-white news__item-button">
+                                <img src="img/menu-toggle.png" alt="">
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <section class="contacts">
+        <div class="contacts__wrapper">
+            <div class="contacts__info">
+                <div class="title">
+                    <div class="title__count">06</div>
+                    <div class="title__text">Контакты</div>
+                </div>
+                <div class="contacts__title">Оставьте заявку и мы вам перезвоним</div>
+                <div class="contacts__items">
+                    <div class="contacts__item">
+                        <div class="contacts__item-title">Адрес</div>
+                        <div class="contacts__item-text">г. Тула, ул. Ленина, д. 1</div>
+                    </div>
+                    <div class="contacts__item">
+                        <div class="contacts__item-title">Время работы</div>
+                        <div class="contacts__item-text">с 9:00 до 18:00 Пн-Пт</div>
+                    </div>
+                    <div class="contacts__item">
+                        <div class="contacts__item-title">Номер телефона</div>
+                        <a href="tel:+79000000000" class="contacts__item-text">+7 (900) 000 00 00</a>
+                    </div>
+                    <div class="contacts__item">
+                        <div class="contacts__item-title">Почта</div>
+                        <a href="mailto:example@mail.ru" class="contacts__item-text">example@mail.ru</a>
+                    </div>
+                </div>
+                <div class="contacts__socials">
+                    <div class="contacts__social">
+                        <img src="img/vk.png" alt="">
+                    </div>
+                    <div class="contacts__social">
+                        <img src="img/tg.png" alt="">
+                    </div>
+                    <div class="contacts__social">
+                        <img src="img/wa.png" alt="">
+                    </div>
+                </div>
+                <div class="contacts__button button">Бесплатная консультация</div>
+            </div>
+            <div class="contacts__map">
+                <iframe
+                    src="https://yandex.ru/map-widget/v1/?um=constructor%3Aee526610cf6c8b9e7db3abdb687fdb8de32f9e4023053c829231201d081caae7&amp;source=constructor"
+                    width="100%" frameborder="0"></iframe>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__top">
+                <div class="footer__logo">
+                    <div class="footer__logo-image">
+                        <img src="img/footer-logo.png" alt="">
+                    </div>
+                    <div class="footer__logo-text">Рулонные кровельные гидроизоляционные мембраны</div>
+                </div>
+                <ul class="footer__list">
+                    <li><a href="#">Главная</a></li>
+                    <li><a href="#">О компании</a></li>
+                    <li><a href="#">Наши работы</a></li>
+                    <li><a href="#">Вопрос-ответ</a></li>
+                    <li><a href="#">Новости</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+                <ul class="footer__list">
+                    <li><a href="#">Каталог</a></li>
+                    <li><a href="#">Кровельные мембраны</a></li>
+                    <li><a href="#">Фасадная грунтовка</a></li>
+                    <li><a href="#">Клей</a></li>
+                    <li><a href="#">Растворители</a></li>
+                </ul>
+                <ul class="footer__list">
+                    <li><a href="#">Готовые решения</a></li>
+                    <li><a href="#">Зеленая кровля</a></li>
+                    <li><a href="#">Классическая кровля</a></li>
+                    <li><a href="#">Террасная доска</a></li>
+                    <li><a href="#">Плитка, камень, брусчатка</a></li>
+                    <li><a href="#">Стилобат</a></li>
+                    <li><a href="#">Балластаная кровля</a></li>
+                </ul>
+                <div class="footer__info">
+                    <p>Написать нам</p>
+                    <div class="footer__socials">
+                        <img src="img/vk.png" alt="">
+                        <img src="img/tg.png" alt="">
+                        <img src="img/wa.png" alt="">
+                    </div>
+                </div>
+                <div class="footer__info">
+                    <p>E-mail</p>
+                    <div class="footer__info-text">
+                        info@yutastroy.ru
+                    </div>
+                </div>
+                <div class="footer__info">
+                    <p>Телефон</p>
+                    <div class="footer__info-text">
+                        +7 (905) 755-06-90
+                    </div>
+                </div>
+                <div class="footer__info">
+                    <p>Работаем</p>
+                    <div class="footer__info-text">
+                        Пн — Пт 8:00 — 17:00
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="container">
+            <div class="footer__bottom">
+                <p>© 2024 РАББЕРФЛЕКС® RX </p>
+                <div class="footer__brevis">
+                    <img src="img/brevis.png" alt="">
+                    <p>Создание сайта - <br> <a href="https://brevis-site.ru">интернет агенство “BREVIS”</a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 <script src="js/jquery-3.7.1.js"></script>
