--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                             <img src="img/menu-toggle.png" alt="">
                         </div>
                         <div class="menu__downbackground">
+                            <a href="#">Каталог</a>
                             <div class="menu__downmenu-close"><img src="img/close.png" alt=""></div>
                             <ul class="menu__downmenu">
                                 <li><a href="#">Продукт 1</a></li>
@@ -125,6 +126,7 @@
                             <img src="img/menu-toggle.png" alt="">
                         </div>
                         <div class="menu__downbackground">
+                            <a href="#">Готовые решения</a>
                             <div class="menu__downmenu-close"><img src="img/close.png" alt=""></div>
                             <ul class="menu__downmenu">
                                 <li><a href="#">Зеленая кровля</a></li>
@@ -170,7 +172,7 @@
                                 </div>
                                 <div class="hero__slide-text">Самоклеящийся композитный полимерный гидроизоляционный
                                     материал для самых ответственных объектов.</div>
-                                <div class="hero__slide-button button-white">Подробнее</div>
+                                <a href="#" class="hero__slide-button button-white">Подробнее</a>
                             </div>
                             <div class="hero__slide-block">
                                 <img class="hero__slider-right" src="img/slide-image.png" alt="">
@@ -188,7 +190,7 @@
                                 </div>
                                 <div class="hero__slide-text">Самоклеящийся композитный полимерный гидроизоляционный
                                     материал для самых ответственных объектов.</div>
-                                <div class="hero__slide-button button-white">Подробнее</div>
+                                <a href="#" class="hero__slide-button button-white">Подробнее</a>
                             </div>
                             <div class="hero__slide-block">
                                 <img class="hero__slider-right" src="img/slide-image.png" alt="">
@@ -233,20 +235,7 @@
                         <a href="#" class="product__title">Рулонная кровельная мембрана RUBBERFLEX® RX 3550</a>
                         <div class="product__price">54,00 €</div>
                     </div>
-                    <div class="catalog__product product-big">
-                        <a href="#" class="product-big__image">
-                            <img src="img/product-big.png" alt="">
-                        </a>
-                        <div class="product-big__block">
-                            <div class="product-big__text">
-                                <div class="product-big__title">Зеленая кровля</div>
-                                <div class="product-big__descr">С нами ваша кровля будет всегда в надежных руках!</div>
-                            </div>
-                            <div class="product-big__button button-white">
-                                <img src="img/menu-toggle.png" alt="">
-                            </div>
-                        </div>
-                    </div>
+
                     <div class="catalog__product product">
                         <a href="#" class="product__image">
                             <img src="img/product-3.png" alt="">
@@ -262,6 +251,23 @@
                         <div class="product__type">Растворитель</div>
                         <a href="#" class="product__title">Растворитель RUBBERFLEX® G-500</a>
                         <div class="product__price">90 €</div>
+                    </div>
+
+                </div>
+                <div class="catalog__products-big">
+                    <div class="catalog__product product-big">
+                        <a href="#" class="product-big__image">
+                            <img src="img/product-big.png" alt="">
+                        </a>
+                        <div class="product-big__block">
+                            <div class="product-big__text">
+                                <div class="product-big__title">Зеленая кровля</div>
+                                <div class="product-big__descr">С нами ваша кровля будет всегда в надежных руках!</div>
+                            </div>
+                            <div class="product-big__button button-white">
+                                <img src="img/menu-toggle.png" alt="">
+                            </div>
+                        </div>
                     </div>
                     <div class="catalog__product product-big">
                         <a href="#" class="product-big__image">
