--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="header__links">
                 <a href="#" class="header__profile">
-                    <img src="img/profile-circle.svg" alt="">
+                    <img src="img/profile-circle.png" alt="">
                 </a>
                 <a href="" class="header__button button-white">
                     Для профессионалов
