--- a/solutions.html
+++ b/solutions.html
@@ -162,13 +162,117 @@
         <div class="container">
             <ul class="breadcrumbs__items">
                 <li class="breadcrumbs__item">Главная</li>
-                <li class="breadcrumbs__item">Каталог продукции</li>
+                <li class="breadcrumbs__item">Готовые решения</li>
             </ul>
         </div>
     </div>
 
 
-
+    <section class="solution">
+        <div class="container">
+            <div class="solution__wrapper">
+                <div class="catalog-page__title">Готовые решения</div>
+                <div class="solution__items">
+                    <div class="solution__item">
+                        <a href="#" class="solution__image">
+                            <img src="img/solution.jpg" alt="">
+                        </a>
+                        <div class="solution__block">
+                            <div class="solution__info">
+                                <div class="solution__name">Зеленая кровля</div>
+                                <div class="solution__text">С нами ваша кровля будет всегда в надежных руках!</div>
+                            </div>
+                            <div class="solution__button">
+                                <button class="button-white">
+                                    <img src="img/menu-toggle.png" alt="">
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="solution__item">
+                        <a href="#" class="solution__image">
+                            <img src="img/solution.jpg" alt="">
+                        </a>
+                        <div class="solution__block">
+                            <div class="solution__info">
+                                <div class="solution__name">Зеленая кровля</div>
+                                <div class="solution__text">С нами ваша кровля будет всегда в надежных руках!</div>
+                            </div>
+                            <div class="solution__button">
+                                <button class="button-white">
+                                    <img src="img/menu-toggle.png" alt="">
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="solution__item">
+                        <a href="#" class="solution__image">
+                            <img src="img/solution.jpg" alt="">
+                        </a>
+                        <div class="solution__block">
+                            <div class="solution__info">
+                                <div class="solution__name">Зеленая кровля</div>
+                                <div class="solution__text">С нами ваша кровля будет всегда в надежных руках!</div>
+                            </div>
+                            <div class="solution__button">
+                                <button class="button-white">
+                                    <img src="img/menu-toggle.png" alt="">
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="solution__item">
+                        <a href="#" class="solution__image">
+                            <img src="img/solution.jpg" alt="">
+                        </a>
+                        <div class="solution__block">
+                            <div class="solution__info">
+                                <div class="solution__name">Зеленая кровля</div>
+                                <div class="solution__text">С нами ваша кровля будет всегда в надежных руках!</div>
+                            </div>
+                            <div class="solution__button">
+                                <button class="button-white">
+                                    <img src="img/menu-toggle.png" alt="">
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="solution__item">
+                        <a href="#" class="solution__image">
+                            <img src="img/solution.jpg" alt="">
+                        </a>
+                        <div class="solution__block">
+                            <div class="solution__info">
+                                <div class="solution__name">Зеленая кровля</div>
+                                <div class="solution__text">С нами ваша кровля будет всегда в надежных руках!</div>
+                            </div>
+                            <div class="solution__button">
+                                <button class="button-white">
+                                    <img src="img/menu-toggle.png" alt="">
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="solution__item">
+                        <a href="#" class="solution__image">
+                            <img src="img/solution.jpg" alt="">
+                        </a>
+                        <div class="solution__block">
+                            <div class="solution__info">
+                                <div class="solution__name">Зеленая кровля</div>
+                                <div class="solution__text">С нами ваша кровля будет всегда в надежных руках!</div>
+                            </div>
+                            <div class="solution__button">
+                                <button class="button-white">
+                                    <img src="img/menu-toggle.png" alt="">
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <footer class="footer">
